logs/gh-archiver.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GitPython-2.1.3.dist-info'...
Listing './lib/python3.5/site-packages/PyGithub-1.34.egg-info'...
Listing './lib/python3.5/site-packages/PyJWT-1.5.3.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/gh_archiver'...
Compiling './lib/python3.5/site-packages/gh_archiver/__init__.py'...
***   File "./lib/python3.5/site-packages/gh_archiver/__init__.py", line 87
    print(f'config variable {e} not set. Check ~/.githubrc',
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gh_archiver-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/github'...
Listing './lib/python3.5/site-packages/github/tests'...
Listing './lib/python3.5/site-packages/github/tests/ReplayData'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.5.dist-info'...
Listing './lib/python3.5/site-packages/jwt'...
Listing './lib/python3.5/site-packages/jwt/contrib'...
Listing './lib/python3.5/site-packages/jwt/contrib/algorithms'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.21.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
